@@ -31,11 +31,9 @@
 #include <string>
 #include <vector>
 
+#include <gadget/Type/InputBaseTypes.h>
 #include <gadget/Type/Input.h>
-#include <gadget/Type/Glove.h>
 #include <gadget/Type/Analog.h>
-#include <gadget/Type/Digital.h>
-#include <gadget/Type/InputMixer.h>
 #include <drivers/5DT/DataGlove/DataGloveStandalone.h>
 
 namespace gadget
@@ -54,7 +52,7 @@ namespace gadget
  */
 
 //class DataGlove : virtual public Input, public Glove, public Analog
-class DataGlove : public InputMixer<Input,Analog>
+class DataGlove : public input_analog_t
 {
 public:
    /** Construct */
