@@ -29,9 +29,9 @@
 
 #include <gadget/Devices/DriverConfig.h>
 #include <vpr/Thread/Thread.h>
+#include <gadget/Type/InputBaseTypes.h>
 #include <gadget/Type/Input.h>
 #include <gadget/Type/Position.h>
-#include <gadget/Type/InputMixer.h>
 #include <drivers/Ascension/Flock/FlockStandalone.h>
 
 
@@ -60,7 +60,8 @@ namespace gadget
  * @see gadget::Position
  */
 //class Flock : public Input, public Position
-class Flock : public InputMixer<Input,Position>
+class Flock
+   : public input_position_t
 {
 public:
    /**
