@@ -30,11 +30,10 @@
 #include <gadget/Devices/DriverConfig.h>
 #include <vector>
 #include <utility>
+#include <gadget/Type/InputBaseTypes.h>
 #include <gadget/Type/Input.h>
 #include <gadget/Type/Digital.h>
 #include <gadget/Type/Analog.h>
-#include <gadget/Type/InputMixer.h>
-
 
 namespace gadget
 {
@@ -44,7 +43,8 @@ namespace gadget
  *
  * @see gadget:;Digital, gadget:;Analog
  */
-class LinuxJoydev : public InputMixer<InputMixer<Input,Digital>,Analog>
+class LinuxJoydev
+   : public input_digital_analog_t
 {
 public:
 
