@@ -46,11 +46,11 @@
 #include <vector>
 
 #include <vpr/Sync/Mutex.h>
+#include <gadget/Type/InputBaseTypes.h>
 #include <gadget/Type/Input.h>
-#include <gadget/Type/Position.h>
 #include <gadget/Type/Digital.h>
 #include <gadget/Type/Analog.h>
-#include <gadget/Type/InputMixer.h>
+#include <gadget/Type/Position.h>
 
 #include <gmtl/Matrix.h>
 #include <gmtl/MatrixOps.h>
@@ -81,8 +81,7 @@ namespace gadget
  * @see gadget::Digital, gadget::Analog, gadget::Position
  */
 class Vrpn
-   : public InputMixer<InputMixer<InputMixer<Input, Analog>, Digital>,
-                       Position>
+   : public input_digital_analog_position_t
 {
 public:
 
